[project]
name = "learnors"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "openrouteservice>=2.3.3",
    "ortools>=9.14.6206",
    "shapely>=2.1.2",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
    "streamlit-folium>=0.17.0",
]
